from application.ports.publish_port import PublisherPort
from application.ports.result_repository_port import ResultRepositoryPort
from domain.repository.model_repository import ModelRepository
from domain.services.ddos_service import detect
from domain.models.input import DDoSInput


class DDoSUseCase:
    """Detects DDoS attacks using XGBoost on 43-feature flow vectors (UC2)."""

    def __init__(self, repository: ModelRepository, publisher: PublisherPort, result_repository: ResultRepositoryPort):
        self._repository = repository
        self._publisher = publisher
        self._result_repository = result_repository

    async def execute(self, input_data: DDoSInput) -> None:
        result = detect(input_data, self._repository)
        if result.anomaly:
            await self._result_repository.save(result)
            await self._publisher.publish(result)
