from domain.models.input.flow_input import FlowInput


class BruteForceInput(FlowInput):
    """43-feature flow vector for Brute Force detection (UC4), shares feature parity with UC2."""
