from domain.models.input.flow_input import FlowInput


class DDoSInput(FlowInput):
    """43-feature flow vector for DDoS detection (UC2)."""
